...
    final List<String> uniqueTabs = [];
    for (final pose in PoseGroup.values) {
      if (!uniqueTabs.contains(pose.tab)) {
        uniqueTabs.add(pose.tab);
      }
    }
    uniqueTabs.add("Notes");
    return uniqueTabs;
  }

  // Create tabs based on unique tabs
  List<Widget> createTabs() {
    return uniqueTabs
...
          appBar: AppBar(
            backgroundColor: Theme.of(context).colorScheme.primary,
            actions: _formKey.currentState?.saveAndValidate() ?? false
                ? [
                    ElevatedButton(
                      onPressed: () => handleSubmission(_formKey.currentState),
                      child: const Text("Submit"),
                    )
                  ]
                : null,
            bottom: TabBar(
              controller: _tabController,
              tabs: createTabs(),
...
